--- a/index.html
+++ b/index.html
@@ -1,31 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pacman</title>
-    <link rel="stylesheet" href="css/app.css">
+  <meta charset="utf-8">
+  <title>Mister Balls</title>
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- <audio class="audioBall" controls>
+    <source src="mp3/bite.mp3" type="audio/mpeg">
+  </audio> -->
+
 </head>
 
-<body onload="onInit()" onkeyup="movePacman(event)">
-    <h1 style="color: blue ;">Pacman</h1>
-    <h2>Score: <span>0</span></h2>
-
-    <div class="modalGameEnd">
-        <button class="modaStart" onclick="onStartGame()">Let's Start</button>
-        <img class="modalImg" src="img/win.jpg" alt="modalImg">
-    </div>
-    <div class="board-container">
-
-    </div>
-
-
-    <script src="js/utils.js"></script>
-    <script src="js/pacman.js"></script>
-    <script src="js/ghost.js"></script>
-    <script src="js/game.js"></script>
+<body onkeyup="onHandleKey(event)" onload="onInitGame()">
+  <h1>Collect those Balls</h1>
+  <h3> Score : <spam class="score"> </spam></h3>
+  <button class="start" onclick="onStartGame(this)">Let's Start</button>
+  <img class="winLose" src="img/win.jpg" alt="win/lose"> 
+  <table>
+    <tbody class="board"></tbody>
+  </table>
+  <script src="js/util.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
